заебал єтэтот хмлÐ

--- a/ITROI/ITROI/src/XML/HTML/reminder.html
+++ b/ITROI/ITROI/src/XML/HTML/reminder.html
@@ -3,7 +3,22 @@
         <table border="2px">
             <tr>
                 <td>
-                        State:
+                        Id:
+                    </td><td>3</td>
+            </tr>
+            <tr>
+                <td>
+                        TaskId:
+                    </td><td></td>
+            </tr>
+            <tr>
+                <td>
+                        StateId:
+                    </td><td>3</td>
+            </tr>
+            <tr>
+                <td>
+                        StateValue:
                     </td><td>0</td>
             </tr>
             <tr>
