--- a/ITROI/ITROI/src/XML/HTML/user.html
+++ b/ITROI/ITROI/src/XML/HTML/user.html
@@ -1,4 +1,4 @@
-<html xmlns:user="http://www.itroi.org/user" xmlns:day="http://www.itroi.org/day" xmlns:task="http://www.itroi.org/task" xmlns:rem="http://www.itroi.org/reminder">
+<html xmlns:user="http://www.itroi.org/user" xmlns:group="http://www.itroi.org/group">
     <body>
         <table border="2px">
             <tr>
@@ -9,37 +9,65 @@
             <tr>
                 <td>
                         Role:
-                    </td><td></td>
+                    </td><td>user</td>
             </tr>
             <tr>
                 <td>
                         Name:
-                    </td><td></td>
-            </tr>
-            <tr>
-                <td>
-                        Date:
                     </td><td>string</td>
             </tr>
             <tr>
                 <td>
-                        Time:
+                        Surname:
                     </td><td>string</td>
             </tr>
             <tr>
                 <td>
-                        Duration:
+                        Login:
                     </td><td>string</td>
             </tr>
             <tr>
                 <td>
-                        Desc:
-                    </td><td>string11</td>
+                        Email:
+                    </td><td>string</td>
             </tr>
             <tr>
                 <td>
-                        Status:
-                    </td><td>female</td>
+                        Password:
+                    </td><td>stringst</td>
+            </tr>
+            <tr>
+                <td>
+                        Gender:
+                    </td><td>string</td>
+            </tr>
+            <tr>
+                <td>
+                        MemberOfGroups:
+                    </td><td>
+                    <table border="2px">
+                        <tr>
+                            <td>
+                    Id:
+                </td><td>1</td>
+                        </tr>
+                        <tr>
+                            <td>
+                    NameOfGroup:
+                </td><td>string</td>
+                        </tr>
+                        <tr>
+                            <td>
+                    GroupRoleId:
+                </td><td>1</td>
+                        </tr>
+                        <tr>
+                            <td>
+                    GroupRoleName:
+                </td><td>OneToSelf</td>
+                        </tr>
+                    </table>
+                </td>
             </tr>
         </table>
     </body>
